# local-rag-agent

./: README.md  pyproject.toml  requirements.txt
app/: branding.py  gradio_app.py
cli/: main.py
data/: graph.db
data/chroma/: chroma.sqlite3
scripts/: smoke_test.py
src/local_rag/: __init__.py  config.py  models.py
src/local_rag/agent/: graph.py  prompts.py  tools.py
src/local_rag/chat/: session.py
src/local_rag/embeddings/: ollama_embed.py
src/local_rag/guardrails/: faithfulness.py  injection.py  relevance.py  thresholds.py
src/local_rag/ingestion/: chunking.py  loaders.py  pipeline.py
src/local_rag/llm/: ollama_client.py
src/local_rag/retrieval/: hybrid.py  kg_retriever.py  reranker.py
src/local_rag/storage/: chroma_store.py  graph_store.py
tests/: test_delete.py  test_loaders.py
