[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-rag-agent"
version = "0.1.0"
description = "Veridian — private document intelligence with hybrid retrieval and guardrails"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "ollama>=0.4",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "rank-bm25>=0.2",
    "networkx>=3.2",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "pandas>=2.2",
    "typer>=0.12",
    "gradio>=5.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
local-rag = "cli.main:app"
local-rag-web = "app.gradio_app:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["local_rag*", "cli*", "app*"]

[tool.setuptools.package-dir]
"" = "src"
"cli" = "cli"
"app" = "app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
